dialog overflow mobile fix + scrollbar theming

--- a/src-style.css
+++ b/src-style.css
@@ -7,6 +7,9 @@
  
 @layer base {
     :root {
+      color-scheme: light;
+      
+      
       --background: 0 0% 100%;
       --foreground: 0 0% 3.9%;
       --card: 0 0% 100%;
@@ -30,6 +33,8 @@
     }
    
     .dark, [data-mode="dark"] {
+      color-scheme: dark;
+
       --background: 0 0% 3.9%;
       --foreground: 0 0% 98%;
       --card: 0 0% 3.9%;
@@ -57,7 +62,19 @@
   * {
     @apply border-border border-solid;
   }
+  html {
+    scrollbar-gutter: stable;
+  }
   body {
     @apply bg-background text-foreground font-sf-display;
+  }
+  ::-webkit-scrollbar {
+    @apply w-4;
+  }
+  ::-webkit-scrollbar-track {
+    @apply bg-background;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply bg-secondary hover:bg-primary rounded-md shadow-md duration-150;
   }
 }
